name: blaze-shields
version: 0.0.0.0
synopsis: create svg by Haskell
description: a Haskell version of shields ,which is on github.
homepage: http://githubcom/Qinka/blaze-shields
license:  BSD3
license-file: LICENSE
author:	Qinka
maintainers: qinka@live.com
category: Web
build-type: Simple
cabal-version: >= 1.12
library
    exposed-modules:
    build-depends:
      base,
      blaze-svg,
      blaze-html,
      blaze-markup
    default-language: Haskell2010
    hs-source-dirs:lib
